--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
     "vite": "^5.4.10"
   }
 }
